			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2767 2005/05/15 06:59:41 jinmei Exp $

<200505>
2005-05-14  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (matchlen): corrected a wrong
	cast from sockaddr_in to sockaddr_in6.

2005-05-13  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5: sync with 5.4-RELEASE (it includes a fix for
	the FreeBSD Security Advisory FreeBSD-SA-05:06-09)
	
2005-05-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/dhcp6c_ia.c (ia_timo): kept the latest server's
	DUID even in the REBIND state in case of sending a Release message
	in that state.

2005-05-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/cfparse.y: corrected "address parameters" so
	that we don't have to specify the meaningless (but mandatory)
	prefix length in the context of IA_NA.

2005-05-03  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/config.c (configure_commit): made sure that
	interface parameters are initialized with the default values even
	if the interface is not explicitly configured in the configuration
	file.  This particularly made sure that the preference option is
	not included unless explicitly specified.  A memory leakage for
	the client when specifying a script file was also fixed.

<200504>
2005-04-29  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/dhcp6c.c (client6_mainloop): corrected error
	handling for select(2) in order to avoid unexpected blocking when
	receiving a signal.

Thu Apr 28 16:12:38 JST 2005 sakane@tanu.org
	* freebsd[45]/usr.sbin/Makefile,netbsd/usr.sbin/Makefile:
	racoon was removed from the make list.

2005-04-28  SUZUKI, Shinsuke <suz@kame.net>
	* freebsd5/sbin/ip6fw: stop including ip6fw in SNAP, since FreeBSD's
	ip6fw is enough (KAME's ip6fw does not have any function different 
	from ip6fw)

2005-04-27  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6.c (in6_update_ifa): always updated